# pelican-text

./: pyproject.toml
.forgejo/workflows/: release.yaml
pelican/plugins/text/: __init__.py  text.py
